2006-02-03  John Franks <jrfranks@zmanda.com>
	* server-src/taper.c: Fix null string printout in CHUNKERSUCCESS log line.

2006-02-03  Ian Turner <ian@zmanda.com>
	* server-src/amadmin.c (main): Don't free conf_tapelist too 
	  early. Thanks to Cédric Lucantis
	  <cedric-lucantis@users.sourceforge.net> for the patch.

2006-02-02 Kevin Till <ktill@zmanda.com>
	* man/xml-source/amanda.8.xml: fix formatting. <informaltable> problem 
				       to be fixed.
	* man/xml-source/amrecover.8.xml: add note on client-encrypted tapes.

2006-02-02  Ian Turner <ian@zmanda.com>
	* recover-src/extract_list.c (extract_files_child): Run tar with 
	  --numeric-owner if we are extracting a non-sambafied tar file. 
	  Thanks to Paul Bijnens <pbijnens@users.sourceforge.net> for 
	  the patch. Thanks also to Mark Schaefer for suggesting this 
	  change.

2006-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Use OFF_T_FMT to printf off_t variable,
	  cast size_t to am64_t and use AM64_FMT to printf them.

2006-01-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (dumper_result): Reset sched(dp)->attempted to 0
	  before adding it to tapeq.

2006-01-27  Ian Turner <ian@zmanda.com>
	* configure.in: Add new option --without-xsltproc (and
	  --with-xsltproc), which turns off (or forces) the use of xsltproc to
	  build manpages. Thanks to Paul Bijnens
	  <pbijnens@users.sourceforge.net> for suggesting this feature.

2006-01-27  Ian Turner <ian@zmanda.com>
	* restore-src/amfetchdump.c: Properly clean up logfiles. Also, 
	  run as user amanda even if we are started as some other user.
	  Thanks to Paul Bijnens <pbijnens@users.sourceforge.net> for the 
	  patch.

2006-01-25  Paddy Sreenivasan <paddy@zmanda.com>
        * common-src/amanda.h:     Removed unnecessary header include files.

2006-01-25  Kevin Till<ktill@zmanda.com>
	* server-src/amadmin.c:	fix for sourceforge bug 1412698
				add missing parameters to "amadmin x disklist"